@@ -22,25 +22,26 @@
 package org.libreplan.web.print;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
+import java.io.FileWriter;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.text.SimpleDateFormat;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.concurrent.atomic.AtomicLong;
 
+import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.ws.rs.core.UriBuilder;
 
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.libreplan.business.orders.entities.Order;
@@ -57,13 +58,10 @@ public class CutyPrint {
 
     private static final Log LOG = LogFactory.getLog(CutyPrint.class);
 
-    private static final String CUTYCAPT_COMMAND = "cutycapt ";
+    private static final String CUTYCAPT_COMMAND = "cutycapt";
     // Estimated maximum execution time (ms)
 
-    private static final int CUTYCAPT_TIMEOUT = 100000;
-
     private static final int CAPTURE_DELAY = 10000;
-
 
     // Taskdetails left padding
     private static int TASKDETAILS_BASE_WIDTH = 310;
@@ -128,148 +126,309 @@ public class CutyPrint {
             final Map<String, String> entryPointsMap,
             Map<String, String> parameters, Planner planner) {
 
-        HttpServletRequest request = (HttpServletRequest) Executions
+        CutyCaptParameters params = new CutyCaptParameters(forwardURL,
+                entryPointsMap, parameters, planner);
+        String generatedSnapshotServerPath = takeSnapshot(params);
+
+        openInAnotherTab(generatedSnapshotServerPath);
+    }
+
+    private static void openInAnotherTab(String producedPrintFilePath) {
+        Executions.getCurrent().sendRedirect(producedPrintFilePath, "_blank");
+    }
+
+    private static class CutyCaptParameters {
+
+        private static final AtomicLong counter = new AtomicLong();
+
+        private final HttpServletRequest request = (HttpServletRequest) Executions
                 .getCurrent().getNativeRequest();
+        private final ServletContext context = request.getSession()
+                .getServletContext();
 
-        String extension = ".pdf";
-        if (((parameters.get("extension") != null) && !(parameters
-                .get("extension").equals("")))) {
-            extension = parameters.get("extension");
+        private final String forwardURL;
+        private final Map<String, String> entryPointsMap;
+        private final Map<String, String> printParameters;
+        private final Planner planner;
+
+        private final boolean containersExpandedByDefault;
+        private final int minWidthForTaskNameColumn;
+
+        private final String generatedSnapshotServerPath;
+
+        private final int recentUniqueToken = (int) (counter.getAndIncrement() % 1000);
+
+        public CutyCaptParameters(final String forwardURL,
+                final Map<String, String> entryPointsMap,
+                Map<String, String> printParameters, Planner planner) {
+            this.forwardURL = forwardURL;
+            this.entryPointsMap = entryPointsMap != null ? entryPointsMap
+                    : Collections.<String, String> emptyMap();
+            this.printParameters = printParameters != null ? printParameters
+                    : Collections.<String, String> emptyMap();
+            this.planner = planner;
+
+            containersExpandedByDefault = Planner
+                    .guessContainersExpandedByDefaultGivenPrintParameters(printParameters);
+            minWidthForTaskNameColumn = planner
+                    .calculateMinimumWidthForTaskNameColumn(containersExpandedByDefault);
+            generatedSnapshotServerPath = buildCaptureDestination(printParameters
+                    .get("extension"));
         }
 
-        // Calculate application path and destination file relative route
-        String absolutePath = request.getSession().getServletContext()
-                .getRealPath("/");
+        String getGeneratedSnapshotServerPath() {
+            return generatedSnapshotServerPath;
+        }
 
-        String filename = "/print/"
-                + new SimpleDateFormat("yyyyMMddHHmmss").format(new Date())
-                + extension;
-
-        // Generate capture string
-        String captureString = CUTYCAPT_COMMAND;
-        String url = CallbackServlet.registerAndCreateURLFor(request,
-                executeOnOriginalContext(new IServletRequestHandler() {
-
-                    @Override
-                    public void handle(HttpServletRequest request,
-                            HttpServletResponse response)
-                            throws ServletException, IOException {
-
-                        EntryPointsHandler.setupEntryPointsForThisRequest(request,
-                                entryPointsMap);
-                        // Pending to forward and process additional parameters
-                        // as show labels, resources, zoom or expand all
-                        request.getRequestDispatcher(forwardURL).forward(
-                                request, response);
-                    }
-                }));
-
-        // Add capture destination callback URL
-        String hostName = resolveLocalHost(request);
-        captureString += " --url="+ request.getScheme() + "://" + hostName + ":"
-                + request.getLocalPort() + url;
-        if (parameters != null) {
-            captureString += "?";
-            for (String key : parameters.keySet()) {
-                captureString += key + "=" + parameters.get(key) + "&";
+        private String buildCaptureDestination(String extension) {
+            if (StringUtils.isEmpty(extension)) {
+                extension = ".pdf";
             }
-            captureString = captureString.substring(0,
-                    (captureString.length() - 1));
+            return String.format("/print/%tY%<tm%<td%<tH%<tM%<tS-%s%s",
+                    new Date(),
+                    recentUniqueToken, extension);
         }
-        boolean expanded = Planner
-                .guessContainersExpandedByDefaultGivenPrintParameters(parameters);
-        int minWidthForTaskNameColumn = planner
-                .calculateMinimumWidthForTaskNameColumn(expanded);
-        int plannerWidth = calculatePlannerWidthForPrintingScreen(planner,
-                minWidthForTaskNameColumn);
-        captureString += " --min-width=" + plannerWidth;
 
-        int plannerHeight = (expanded ? planner.getAllTasksNumber() : planner
-                .getTaskNumber()) * TASK_HEIGHT + PRINT_VERTICAL_SPACING;
+        /**
+         * An unique recent display number for Xvfb. It's not truly unique
+         * across all the life of a libreplan application, but it's in the last
+         * period of time.
+         *
+         * @return the display number to use by Xvfb
+         */
+        public int getXvfbDisplayNumber() {
+            return recentUniqueToken + 1; // avoid display 0
+        }
 
-        captureString += " --min-height=" + plannerHeight;
+        void fillParameters(ProcessBuilder c) {
+            Map<String, String> parameters = buildParameters();
+            for (Entry<String, String> each : parameters.entrySet()) {
+                c.command()
+                        .add(String.format("--%s=%s", each.getKey(),
+                                each.getValue()));
+            }
+        }
 
-        // Static width and time delay parameters (FIX)
+        private Map<String, String> buildParameters() {
+            Map<String, String> result = new HashMap<String, String>();
 
-        captureString += " --delay=" + CAPTURE_DELAY;
+            result.put("url", buildSnapshotURLParam());
 
-        String generatedCSSFile = createCSSFile(
-                absolutePath + "/planner/css/print.css",
-                plannerWidth,
-                planner,
-                parameters.get("labels"),
-                parameters.get("resources"),
-                expanded,
-                minWidthForTaskNameColumn);
+            int width = buildMinWidthParam();
+            result.put("min-width", width + "");
 
-        // Relative user styles
-        captureString += " --user-style-path=" + generatedCSSFile;
+            result.put("min-height", buildMinHeightParam() + "");
+            result.put("delay", CAPTURE_DELAY + "");
+            result.put("user-style-path", buildCustomCSSParam(width));
+            result.put("out", buildPathToOutputFileParam());
+            result.put("header", String.format("Accept-Language:%s", Locales
+                    .getCurrent().getLanguage()));
+            return result;
+        }
 
-        // Destination complete absolute path
-        captureString += " --out=" + absolutePath + filename;
+        private String buildSnapshotURLParam() {
+            IServletRequestHandler snapshotRequestHandler = executeOnOriginalContext(new IServletRequestHandler() {
 
-        // User language
-        captureString += " --header=Accept-Language:"
-                + Locales.getCurrent().getLanguage();
+                @Override
+                public void handle(HttpServletRequest request,
+                        HttpServletResponse response) throws ServletException,
+                        IOException {
 
+                    EntryPointsHandler.setupEntryPointsForThisRequest(request,
+                            entryPointsMap);
+                    // Pending to forward and process additional parameters
+                    // as show labels, resources, zoom or expand all
+                    request.getRequestDispatcher(forwardURL).forward(request,
+                            response);
+                }
+            });
+            String pageToSnapshot = CallbackServlet.registerAndCreateURLFor(
+                    request, snapshotRequestHandler);
+            return createCaptureURL(pageToSnapshot);
+        }
+
+        private String createCaptureURL(String capturePath) {
+            String hostName = resolveLocalHost();
+            String uri = String.format("%s://%s:%s", request.getScheme(),
+                    hostName, request.getLocalPort());
+            UriBuilder result = UriBuilder.fromUri(uri).path(capturePath);
+
+            for (Entry<String, String> entry : printParameters.entrySet()) {
+                result = result.queryParam(entry.getKey(), entry.getValue());
+            }
+            return result.build().toASCIIString();
+        }
+
+        private String resolveLocalHost() {
+            try {
+                InetAddress host = InetAddress
+                        .getByName(request.getLocalName());
+                return host.getHostName();
+            } catch (UnknownHostException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        private int buildMinWidthParam() {
+            if (planner != null && planner.getTimeTracker() != null) {
+                return planner.getTimeTracker().getHorizontalSize()
+                        + calculateTaskDetailsWidth();
+            }
+            return 0;
+        }
+
+        private int calculateTaskDetailsWidth() {
+            return TASKDETAILS_BASE_WIDTH
+                    + Math.max(0, minWidthForTaskNameColumn
+                            - BASE_TASK_NAME_PIXELS);
+        }
+
+        private int buildMinHeightParam() {
+            return (containersExpandedByDefault ? planner.getAllTasksNumber()
+                    : planner.getTaskNumber())
+                    * TASK_HEIGHT
+                    + PRINT_VERTICAL_SPACING;
+        }
+
+        private String buildCustomCSSParam(int plannerWidth) {
+            // Calculate application path and destination file relative route
+            String absolutePath = context.getRealPath("/");
+            cssLinesToAppend(plannerWidth);
+            return createCSSFile(absolutePath + "/planner/css/print.css",
+                    cssLinesToAppend(plannerWidth));
+        }
+
+        private static String createCSSFile(String sourceFile,
+                String cssLinesToAppend) {
+            File destination;
+            try {
+                destination = File.createTempFile("print", ".css");
+                FileUtils.copyFile(new File(sourceFile), destination);
+            } catch (IOException e) {
+                LOG.error(
+                        "Can't create a temporal file for storing the CSS files",
+                        e);
+                return sourceFile;
+            }
+            FileWriter appendToFile = null;
+            try {
+                appendToFile = new FileWriter(destination, true);
+
+                appendToFile.write(cssLinesToAppend);
+                appendToFile.flush();
+            } catch (IOException e) {
+                LOG.error("Can't append to the created file " + destination, e);
+            } finally {
+                try {
+                    if (appendToFile != null) {
+                        appendToFile.close();
+                    }
+                } catch (IOException e) {
+                    LOG.warn("error closing fileWriter", e);
+                }
+            }
+            return destination.getAbsolutePath();
+        }
+
+        private String cssLinesToAppend(int width) {
+            String includeCSSLines = " body { width: " + width + "px; } \n";
+            if ("all".equals(printParameters.get("labels"))) {
+                includeCSSLines += " .task-labels { display: inline !important;} \n ";
+            }
+            if ("all".equals(printParameters.get("resources"))) {
+                includeCSSLines += " .task-resources { display: inline !important;} \n";
+            }
+
+            includeCSSLines += heightCSS();
+            includeCSSLines += widthForTaskNamesColumnCSS();
+            return includeCSSLines;
+        }
+
+        private String heightCSS() {
+            int tasksNumber = containersExpandedByDefault ? planner
+                    .getAllTasksNumber() : planner
+                    .getTaskNumber();
+            int height = (tasksNumber * TASK_HEIGHT) + PRINT_VERTICAL_PADDING;
+            String heightCSS = "";
+            heightCSS += " body div#scroll_container { height: " + height
+                    + "px !important;} \n"; /* 1110 */
+            heightCSS += " body div#timetracker { height: " + (height + 20)
+                    + "px !important; } \n";
+            heightCSS += " body div.plannerlayout { height: " + (height + 80)
+                    + "px !important; } \n";
+            heightCSS += " body div.main-layout { height: " + (height + 90)
+                    + "px !important; } \n";
+            return heightCSS;
+        }
+
+        private String widthForTaskNamesColumnCSS() {
+            String css = "/* ------ Make the area for task names wider ------ */\n";
+            css += "th.z-tree-col {width: 76px !important;}\n";
+            css += "th.tree-text {width: " + (34 + minWidthForTaskNameColumn)
+                    + "px !important;}\n";
+            css += ".taskdetailsContainer, .z-west-body, .z-tree-header, .z-tree-body {";
+            css += "width: " + (176 + minWidthForTaskNameColumn) + "px !important;}\n";
+            return css;
+        }
+
+        private String buildPathToOutputFileParam() {
+            return context.getRealPath(generatedSnapshotServerPath);
+        }
+
+    }
+
+    /**
+     * It blocks until the snapshot is ready. It invokes cutycapt program in
+     * order to take a snapshot from a specified url
+     *
+     * @return the path in the web application to access via a HTTP GET to the
+     *         generated snapshot.
+     */
+    private static String takeSnapshot(CutyCaptParameters params) {
+
+        ProcessBuilder capture = new ProcessBuilder(CUTYCAPT_COMMAND);
+        params.fillParameters(capture);
+        String generatedSnapshotServerPath = params
+                .getGeneratedSnapshotServerPath();
+
+        Process printProcess = null;
+        Process serverProcess = null;
         try {
-            // CutyCapt command execution
-            LOG.warn(captureString);
-
-            Process printProcess;
-            Process serverProcess = null;
+            LOG.info("calling printing: " + capture.command());
 
             // If there is a not real X server environment then use Xvfb
-            if ((System.getenv("DISPLAY") == null)
-                    || (System.getenv("DISPLAY").equals(""))) {
-                String[] serverEnvironment = { "PATH=$PATH" };
-                serverProcess = Runtime.getRuntime().exec("env - Xvfb :99",
-                        serverEnvironment);
-                String[] environment = { "DISPLAY=:99.0" };
-                printProcess = Runtime.getRuntime().exec(captureString,
-                        environment);
-            } else {
-                printProcess = Runtime.getRuntime().exec(captureString);
+            if (StringUtils.isEmpty(System.getenv("DISPLAY"))) {
+                ProcessBuilder s = new ProcessBuilder("Xvfb", ":"
+                        + params.getXvfbDisplayNumber());
+                serverProcess = s.start();
+                capture.environment().put("DISPLAY",
+                        ":" + params.getXvfbDisplayNumber() + ".0");
             }
-            try {
-                printProcess.waitFor();
-                printProcess.destroy();
-
-                if ((System.getenv("DISPLAY") == null)
-                        || (System.getenv("DISPLAY").equals(""))) {
-                    serverProcess.destroy();
-                }
-                Executions.getCurrent().sendRedirect(filename, "_blank");
-            } catch (Exception e) {
-                LOG.error("Could open generated PDF", e);
-            }
-
-        } catch (IOException e) {
-            LOG.error("Could not execute print command", e);
-        }
-    }
-
-    private static String resolveLocalHost(HttpServletRequest request) {
-        try {
-            InetAddress host = InetAddress.getByName(request.getLocalName());
-            return host.getHostName();
-        } catch (UnknownHostException e) {
+            printProcess = capture.start();
+            printProcess.waitFor();
+            // once the printProcess finishes, the print snapshot is available
+            return generatedSnapshotServerPath;
+        } catch (InterruptedException e) {
             throw new RuntimeException(e);
+        } catch (IOException e) {
+            LOG.error("error invoking command", e);
+            throw new RuntimeException(e);
+        } finally {
+            if (printProcess != null) {
+                destroy(printProcess);
+            }
+            if (serverProcess != null) {
+                destroy(serverProcess);
+            }
         }
     }
 
-    private static int calculatePlannerWidthForPrintingScreen(Planner planner,
-            int minWidthForTaskNameColumn) {
-        if (planner != null && planner.getTimeTracker() != null) {
-            return planner.getTimeTracker().getHorizontalSize()
-                    + calculateTaskDetailsWidth(minWidthForTaskNameColumn);
+    private static void destroy(Process process) {
+        try {
+            process.destroy();
+        } catch (Exception e) {
+            LOG.error("error stoping process " + process, e);
         }
-        return 0;
-    }
-
-    private static int calculateTaskDetailsWidth(int minWidthForTaskNameColumn) {
-        return TASKDETAILS_BASE_WIDTH
-                + Math.max(0, minWidthForTaskNameColumn - BASE_TASK_NAME_PIXELS);
     }
 
     private static IServletRequestHandler executeOnOriginalContext(
@@ -289,75 +448,4 @@ public class CutyPrint {
         };
     }
 
-    private static String heightCSS(int tasksNumber) {
-        int height = (tasksNumber * TASK_HEIGHT) + PRINT_VERTICAL_PADDING;
-        String heightCSS = "";
-        heightCSS += " body div#scroll_container { height: " + height
-                + "px !important;} \n"; /* 1110 */
-        heightCSS += " body div#timetracker { height: " + (height + 20)
-                + "px !important; } \n";
-        heightCSS += " body div.plannerlayout { height: " + (height + 80)
-                + "px !important; } \n";
-        heightCSS += " body div.main-layout { height: " + (height + 90)
-                + "px !important; } \n";
-        return heightCSS;
     }
-
-    private static String createCSSFile(String srFile, int width,
-            Planner planner, String labels, String resources, boolean expanded,
-            int minimumWidthForTaskNameColumn) {
-        File generatedCSS = null;
-        try {
-            generatedCSS = File.createTempFile("print", ".css");
-
-            File f1 = new File(srFile);
-            InputStream in = new FileInputStream(f1);
-
-            // For Overwrite the file.
-            OutputStream out = new FileOutputStream(generatedCSS);
-
-            byte[] buf = new byte[1024];
-            int len;
-            while ((len = in.read(buf)) > 0) {
-                out.write(buf, 0, len);
-            }
-            String includeCSSLines = " body { width: " + width + "px; } \n";
-            if ((labels != null) && (labels.equals("all"))) {
-                includeCSSLines += " .task-labels { display: inline !important;} \n ";
-            }
-
-            if ((resources != null) && (resources.equals("all"))) {
-                includeCSSLines += " .task-resources { display: inline !important;} \n";
-            }
-            includeCSSLines += heightCSS(expanded ? planner.getAllTasksNumber()
-                    : planner.getTaskNumber());
-            includeCSSLines += widthForTaskNamesColumnCSS(minimumWidthForTaskNameColumn);
-
-            out.write(includeCSSLines.getBytes());
-            in.close();
-            out.close();
-
-        } catch (FileNotFoundException ex) {
-            LOG.error(ex.getMessage() + " in the specified directory.", ex);
-            System.exit(0);
-        } catch (IOException e) {
-            LOG.error(e.getMessage());
-        }
-        if (generatedCSS != null) {
-            return generatedCSS.getAbsolutePath();
-        } else {
-            return srFile;
-        }
-    }
-
-    private static String widthForTaskNamesColumnCSS(
-            int minWidthPixels) {
-        String css = "/* ------ Make the area for task names wider ------ */\n";
-        css += "th.z-tree-col {width: 76px !important;}\n";
-        css += "th.tree-text {width: " + (34 + minWidthPixels)
-                + "px !important;}\n";
-        css += ".taskdetailsContainer, .z-west-body, .z-tree-header, .z-tree-body {";
-        css += "width: " + (176 + minWidthPixels) + "px !important;}\n";
-        return css;
-    }
-}
